--- a/benjamin/src/components/styles/style.css
+++ b/benjamin/src/components/styles/style.css
@@ -64,7 +64,7 @@ button:not(:hover) {
 
 }
 
-.hello {
+#hello {
     position: fixed;
     top: 0;
     left: 0;
@@ -90,5 +90,48 @@ button:not(:hover) {
     text-align: center;
     line-height: 90vh;
     opacity: 0;
-    transition: all 1.5s;
+    transition: all 0.5s;
+    animation: fadeIn;
+
 }
+
+.pfp {
+z-index: 1;
+width: 300px;
+height: 300px;
+display: flex;
+flex-direction: row;
+
+}
+
+.pic {
+border-radius: 30%;
+border-style: outset;
+border-color: black;
+float: right;
+box-shadow: 0 12px 16px 0 rgb(182, 66, 66), 0 17px 10px 0 rgba(0, 0, 0, 2);
+}
+
+@keyframes fadeIn {
+    to{
+        opacity: 1;
+    }
+}
+
+p {
+    font-family:'Courier New', Courier, monospace;
+    font-size: larger;
+}
+
+.about {
+    width: 50%;
+    padding-left: 15px;
+    padding-top: 10px;
+    display: flex;
+    flex-wrap:wrap;
+    flex-direction: row;
+    justify-content: center;
+    overflow: hidden;
+}
+
+
