--- a/benjamin/src/components/styles/style.css
+++ b/benjamin/src/components/styles/style.css
@@ -30,6 +30,7 @@ li {
     padding: 10px;
     text-decoration: none;
     color: black;
+    padding-left: 40px;
 }
 
 
@@ -41,10 +42,6 @@ button:hover {
 
 button:not(:hover) {
     transition-duration: 0.9s;
-}
-
-.git {
-    background-color: #af8fe9;
 }
 
 .page-pos {
@@ -95,21 +92,59 @@ button:not(:hover) {
 
 }
 
-.pfp {
-z-index: 1;
-width: 300px;
-height: 300px;
+.pfp1 {
+z-index: 20;
+width: 50%;
+height: 90%;
 display: flex;
 flex-direction: row;
-
+padding-top: 35px;
+justify-content: flex-start;
+padding-right: 50px;
 }
 
-.pic {
+.pfp2 {
+    z-index: 10;
+    width: 50%;
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    padding-top: 35px;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-right: 50px;
+    }
+.pics {
+    z-index: 10;
+    width: 40%;
+    height: 105%;
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+}
+
+.pic1 {
 border-radius: 30%;
-border-style: outset;
+border-style: solid;
 border-color: black;
+height: 325px;
+width: 325px;
 float: right;
-box-shadow: 0 12px 16px 0 rgb(182, 66, 66), 0 17px 10px 0 rgba(0, 0, 0, 2);
+box-shadow: -16px -13px 16px 0px rgb(182, 66, 66), 0 17px 10px 0 rgba(0, 0, 0, 2);
+display: flex;
+align-items: flex-end;
+position: absolute;
+}
+
+.pic2 {
+    border-radius: 30%;
+    border-style:solid;
+    border-color: black;
+    float: right;
+    box-shadow: 16px 13px 16px 0 rgb(182, 66, 66), 0 17px 10px 0 rgba(0, 0, 0, 2);
+    height: 350px;
+width: 350px;
+position: absolute;
 }
 
 @keyframes fadeIn {
@@ -124,14 +159,29 @@ p {
 }
 
 .about {
-    width: 50%;
-    padding-left: 15px;
+    width: 40%;
     padding-top: 10px;
     display: flex;
-    flex-wrap:wrap;
     flex-direction: row;
     justify-content: center;
     overflow: hidden;
+    text-decoration: none;
+    align-items: center;
+}
+
+.aboutP {
+   width: 400px;
 }
 
 
+p{
+   color: white;
+}
+
+h4 {
+    color: white;
+}
+
+.hobs {
+    padding-top: 80px;
+}
