--- a/benjamin/src/components/styles/style.css
+++ b/benjamin/src/components/styles/style.css
@@ -127,8 +127,8 @@ padding-right: 50px;
 border-radius: 30%;
 border-style: solid;
 border-color: black;
-height: 325px;
-width: 325px;
+height: 350px;
+width: 350px;
 float: right;
 box-shadow: -16px -13px 16px 0px rgb(182, 66, 66), 0 17px 10px 0 rgba(0, 0, 0, 2);
 display: flex;
@@ -142,8 +142,8 @@ position: absolute;
     border-color: black;
     float: right;
     box-shadow: 16px 13px 16px 0 rgb(182, 66, 66), 0 17px 10px 0 rgba(0, 0, 0, 2);
-    height: 350px;
-width: 350px;
+    height: 325px;
+width: 325px;
 position: absolute;
 }
 
@@ -180,8 +180,26 @@ p{
 
 h4 {
     color: white;
+    text-decoration: underline;
+    text-decoration-color:  rgb(182, 66, 66);
 }
 
 .hobs {
     padding-top: 80px;
 }
+
+.summary{
+    width: 25%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.educate {
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+}
+
