--- a/benjamin/src/components/styles/style.css
+++ b/benjamin/src/components/styles/style.css
@@ -127,7 +127,7 @@ padding-right: 50px;
 border-radius: 30%;
 border-style: solid;
 border-color: black;
-height: 350px;
+height: 400px;
 width:auto;
 float: right;
 box-shadow: -16px -13px 16px 0px rgb(182, 66, 66), 0 17px 10px 0 rgba(0, 0, 0, 2);
@@ -142,7 +142,7 @@ position: absolute;
     border-color: black;
     float: right;
     box-shadow: 16px 13px 16px 0 rgb(182, 66, 66), 0 17px 10px 0 rgba(0, 0, 0, 2);
-    height: 350px;
+    height: 400px;
 width: auto;
 position: absolute;
 }
@@ -232,3 +232,25 @@ padding-left: 50px;
 flex-direction: row;
 }
 
+.projs {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 50%;
+    padding: 15px;
+}
+
+.projsCap {
+    width: 400px;
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+
+.projsP {
+    display: flex;
+    justify-content: center;
+    color: white;
+    padding-top: 15px;
+}
